[gd_scene load_steps=4 format=3 uid="uid://bmmoi86ihalo3"]

[ext_resource type="Theme" uid="uid://1c1e156uchg8" path="res://data/theme/kiwicraft_theme.tres" id="1_2q0m0"]
[ext_resource type="Script" path="res://source/ui/settings_menu.gd" id="1_avhyg"]
[ext_resource type="Texture2D" uid="uid://b0dhjxvrd802v" path="res://data/textures/ui/tile.png" id="3_biwuc"]

[node name="SettingsMenu" type="MarginContainer"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_2q0m0")
script = ExtResource("1_avhyg")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(217, 104)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_biwuc")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="All" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="Settings" type="VBoxContainer" parent="All"]
layout_mode = 2

[node name="UIScale" type="HBoxContainer" parent="All/Settings"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Name" type="Label" parent="All/Settings/UIScale"]
layout_mode = 2
size_flags_horizontal = 3
text = "UI Scale"

[node name="HSlider" type="HSlider" parent="All/Settings/UIScale"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 4.0
value = 2.0

[node name="Number" type="Label" parent="All/Settings/UIScale"]
layout_mode = 2
size_flags_horizontal = 3
text = "2"

[node name="Colourblind" type="HBoxContainer" parent="All/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="All/Settings/Colourblind"]
layout_mode = 2
text = "Colourblind mode"

[node name="OptionButton" type="OptionButton" parent="All/Settings/Colourblind"]
layout_mode = 2
item_count = 4
selected = 3
popup/item_0/text = "Protanopia"
popup/item_0/id = 0
popup/item_1/text = "Deuteranopia"
popup/item_1/id = 1
popup/item_2/text = "Tritanopia"
popup/item_2/id = 2
popup/item_3/text = "None"
popup/item_3/id = 3

[node name="Apply" type="Button" parent="All/Settings"]
layout_mode = 2
text = "Apply Changes"

[node name="TextureRect" type="TextureRect" parent="All/Settings"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="All/Settings"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Separator" type="VBoxContainer" parent="All"]
layout_mode = 2

[node name="Back" type="Button" parent="All/Separator"]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="All/Settings/UIScale/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="item_selected" from="All/Settings/Colourblind/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="All/Settings/Apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="All/Separator/Back" to="." method="_on_back_pressed"]
